assets/styles.less
/* ... */
html,
body {
  height: 100%;
}

html {
  overflow-x: hidden;
  cursor: default;
}

body {
  font-family: "Inter", Arial, Helvetica, sans-serif;
  font-weight: 400;
  color: var(--cor-neutra-4);
}

main {
  padding-top: var(--header-height);
}
.fixed-header {
  main {
    padding-top: 0 !important;
  }
}

strong,
b {
  font-weight: 700;
}

p {
  &:last-child {
    margin-bottom: 0;
  }
}

ul[role="list"],
ol[role="list"] {
  list-style: none;
}

html:focus-within {
  scroll-behavior: smooth;
}

a:not([class]) {
  text-decoration-skip-ink: auto;
}

img,
picture,
svg,
video,
canvas {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
  font-style: italic;
  background-repeat: no-repeat;
  background-size: cover;
}

input,
button,
textarea,
select {
  font: inherit;
}

@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
    transition: none;
  }
}

@media (min-width: 1400px) {
  .container,
  .container-lg,
  .container-md,
  .container-sm,
  .container-xl,
  .container-xxl {
    max-width: 1400px;
  }
}

.btn {
  border-radius: 50px;
  border-width: 2px;
  font-weight: 700;
  line-height: 1.1em;
  --bs-btn-padding-y: 0.75rem;
  --bs-btn-padding-x: ~"calc(var(--bs-btn-padding-y) * 2)";
}

.btn-primary {
  --bs-btn-bg: var(--bs-primary);
  --bs-btn-border-color: var(--bs-primary);
  --bs-btn-hover-bg: var(--cor-prim-hgl);
  --bs-btn-hover-border-color: var(--cor-prim-hgl);
  --bs-btn-color: var(--cor-neutra-4);
  --bs-btn-hover-color: var(--cor-neutra-4);
}

.text-hyphens {
  hyphens: auto;
  word-break: normal;
  white-space: normal;
}

.text-balanced {
  text-wrap: balance;
}

.separator {
  &.horz-lines {
    background: linear-gradient(to bottom, currentColor 1px, transparent 1px);
    background-size: 100% 10px;
  }

  &.horz {
    height: 20px;
    width: 100%;
  }
  &.vert {
    width: 20px;
    height: 100%;
  }
}

:root {
  --glow-x: 0px;
  --glow-y: 0px;
}

.mouse-glow {
  position: relative;
  overflow: hidden;
  display: inline-block;
}

.mouse-glow .glow-effect {
  pointer-events: none;
  position: absolute;
  background-color: var(
    --glow-color,
    rgba(255, 255, 255, 0.7)
  ); /* Cor padrão do brilho */
  width: 10px;
  height: 10px;
  border-radius: 50%;
  opacity: 0;
  transition: opacity ease 0.3s, width linear 0.1s, height linear 0.1s;
  filter: blur(100px);
  left: 0;
  top: 0;
  z-index: 0;
  transform: ~"translate(calc(var(--glow-x) - 50%), calc(var(--glow-y) - 50%))";
}

.mouse-glow:hover .glow-effect {
  width: 300px;
  height: 300px;
  opacity: 0.5;
}

#header-logo {
  display: inline-flex;
  align-items: center;
  margin: 0 auto;
  max-width: 120px;

  img {
    display: block;
    margin: 0;
    width: 100%;
  }
}

#header {
  a {
    .trans;
  }

  .nav-link {
    display: flex;
    align-items: center;
    font-weight: 600;
    gap: 10px;
    text-align: center;
    justify-content: center;

    ul a:hover,
    ul a:focus {
      background-color: var(--cor-neutra-4);
      color: white;
    }

    @media (max-width: 991px) {
      padding: 1rem 1.5rem;
    }
  }

  .dropdown-item {
    --bs-dropdown-item-padding-x: 1.5rem;
    --bs-dropdown-item-padding-y: 0.75rem;
    font-weight: 600;
  }

  .dropdown-menu {
    a {
      --bs-dropdown-link-hover-bg: var(--cor-neutra-4);
      --bs-dropdown-link-hover-color: white;
      --bs-nav-link-hover-bg: var(--cor-neutra-4);
      --bs-nav-link-hover-color: white;
    }
    a.dropdown-item {
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: 100%;

      @media (max-width: 991px) {
        justify-content: center;
      }
    }
  }

  .navbar-nav {
    @media (min-width: 640px) {
      flex-direction: row;
    }
  }

  @media (min-width: 992px) {
    max-height: 88px;

    .nav-item {
      display: flex;
    }
  }
}

.dropdown-menu.show {
  animation: ddFadeIn 0.3s ease;
}
@keyframes ddFadeIn {
  0% {
    transform: translateY(-10px);
    opacity: 0;
  }
  100% {
    transform: translateY(0px);
    opacity: 1;
  }
}

/* Desktop View */
@media all and (min-width: 992px) {
  .dropdown-menu li {
    position: relative;
  }

  .dropdown-menu .submenu {
    display: none;
    position: absolute;
    left: 100%;
    top: -7px; /* Ajuste para alinhar o submenu */
  }

  .dropdown-menu > li:hover > .submenu {
    display: block;
  }

  .dropdown-menu-end .submenu {
    left: auto;
    right: 100%;
  }
}

/* Small Devices */
@media (max-width: 991px) {
  .dropdown-menu .dropdown-menu {
    margin-left: 0.7rem;
    margin-right: 0.7rem;
    margin-bottom: 0.5rem;
  }
}

#areaClienteOffcanvas {
  --bs-offcanvas-padding-x: 1.5rem;
  --bs-offcanvas-padding-y: 1.5rem;

  .btn-close {
    --bs-btn-close-color: #fff;
    background: none;
    padding: 5px;
    width: auto;
    height: auto;
    line-height: 0;
  }

  .offcanvas-header {
    // min-height: var(--header-height, 88px);
    max-height: var(--header-height, 88px);
  }

  .offcanvas-title {
    i {
      font-size: 2em;
    }
  }

  .nav-link {
    --bs-nav-link-padding-y: 1rem;
    --bs-nav-link-color: var(--cor-neutra-8);
    --bs-nav-link-hover-color: #fff;
    --bs-nav-link-bg: transparent;
    --bs-nav-link-hover-bg: var(--cor-neutra-4);

    background-color: var(--bs-nav-link-bg);

    &:focus,
    &:hover {
      --bs-nav-link-bg: var(--bs-nav-link-hover-bg);
    }

    ul a:hover,
    ul a:focus {
      background-color: var(--cor-neutra-4);
      color: white;
    }
  }
  .nav {
    > .nav-link {
      border-radius: 5px;
    }
  }
}
.offcanvas-backdrop.show {
  backdrop-filter: blur(5px);
}

h1,
h2 {
  font-family: var(--font-title);
  text-transform: uppercase;
  font-weight: 100;

  strong,
  b {
    font-weight: 700;
  }
}
/* ... */

